--- a/src/Login.css
+++ b/src/Login.css
@@ -80,12 +80,13 @@
     margin-top: 30px;
 }
 
-.forgot-label, .register-account{
+.forgot-label, .register-account, .has-account, .cancel-login{
     color: #878787;
     text-decoration: underline;
+    cursor: pointer;
 }
 
-.forgot-label:hover{
+.forgot-label:hover, .register-account:hover, .has-account:hover, .cancel-login:hover{
     color: #56cfe1;
 }
 
