--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -96,3 +96,13 @@ li.level-1, .t4s-menu-item.level-2{
     border-radius: 4px;
     margin-right: 20px;
 }
+
+
+@media (min-width: 374px) and (max-width: 576px) {
+    .sidebar{
+        width: 80%;
+    }
+    .cart, .search{
+        display: flex;
+    }
+}
