--- a/src/Header.css
+++ b/src/Header.css
@@ -279,6 +279,13 @@ li.t4s-menu-item{
     width: 50%;
 }
 
+.w-100{
+    width: 100%;
+    position: absolute;
+    height: 100vh;
+    top: 0;
+}
+
 .layout-menu{
     width:1300px;
     left: -270px;
